@@ -459,7 +459,7 @@ STM8S Discovery Kit
 
 If you are using FTDI-2232D module and the connection is standard, type:
 
-  $ openocd -f interface/openocd-usb.cfg -f target/stm32.cfg
+  $ openocd -f interface/openocd-usb.cfg -f target/stm32f1x.cfg
 
 Initially, the flash ROM of the chip is protected.  you need to do:
 
